--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis&family=Lobster&family=Macondo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Amatic+SC:wght@700&family=Dosis&family=Lobster&family=Macondo&display=swap');
 
 * {
   box-sizing: border-box;
